Added other modules needed for the project.

--- a/auth/src/main/AndroidManifest.xml
+++ b/auth/src/main/AndroidManifest.xml
@@ -3,16 +3,19 @@
 
     <application>
         <activity
-            android:name=".Activity_SignIn"
+            android:name=".Activities.Activity_SignUp"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.login.Activity_Login"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
+            android:name=".Activities.Activity_SignIn"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
     </application>
 
 </manifest>
