--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,7 @@ include ':app'
 include ':appCore'
 include ':auth'
 include ':styles'
+include ':enrollment'
+include ':classroom'
+include ':notifications'
+include ':campus'
