--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,17 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'com.google.firebase:firebase-database:20.1.0'
-    implementation project(path: ':appCore')
-    implementation project(path: ':styles')
-    implementation project(path: ':auth')
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    //Projects
+    implementation project(path: ':appCore') //Core Library
+    implementation project(path: ':styles') //Theme Library
+    implementation project(path: ':auth') //Authentication Library
+    implementation project(path: ':campus')
+    implementation project(path: ':classroom')
+    implementation project(path: ':enrollment')
+    implementation project(path: ':notifications')
 }
