--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_home"
             android:theme="@style/Theme.School_App.NoActionBar">
             <meta-data
@@ -26,6 +26,7 @@
             android:exported="true"
             android:label=""
             android:theme="@style/Theme.School_App.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
