Designing app user interface and creating authentication method

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation project(path: ':classroom')
     implementation project(path: ':enrollment')
     implementation project(path: ':notifications')
+    implementation project(path: ':account')
 }
