--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,14 @@
         android:theme="@style/Theme.School_App"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.Activity_SplashScreen"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Activities.MainActivity"
             android:exported="true"
             android:label="@string/title_activity_home"
             android:theme="@style/Theme.School_App.NoActionBar">
@@ -21,17 +28,31 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity
-            android:name=".Activity_Home"
-            android:exported="true"
-            android:label=""
-            android:theme="@style/Theme.School_App.NoActionBar">
 
+        <activity
+            android:name="com.mobilelearning.solutions.auth.Activities.Activity_SignIn"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+
+        <activity
+            android:name=".Activities.Activity_Home"
+            android:exported="true"
+            android:label=""
+            android:theme="@style/Theme.School_App.NoActionBar">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
 
             <meta-data
                 android:name="android.app.lib_name"
