--- a/enrollment/src/main/AndroidManifest.xml
+++ b/enrollment/src/main/AndroidManifest.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <application>
+        <activity
+            android:name=".Activities.Activity_EmergencyContact"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.Activity_ResidenceInfo"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.Activity_StudentInfo"
+            />
+    </application>
+
 </manifest>
